--- a/website/pages/bower.json
+++ b/website/pages/bower.json
@@ -14,5 +14,13 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.2.1",
+    "moment": "^2.19.1",
+    "react": "^16.0.0",
+    "redux": "^3.7.2",
+    "underscore": "^1.8.3"
+  }
 }
