--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -7,8 +7,12 @@
         "scripts": ["background.js"],
         "persistent": false
     },
+
     "page_action": {
-        "default_title": "Show current timestamp"
+        "default_title": "Show current timestamp",
+        "default_icon": "icon.png",
+        "default_popup": "popup.html"
+        
     },
     "permissions": [
         "declarativeContent",
