--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -7,6 +7,11 @@
         "scripts": ["background.js"],
         "persistent": false
     },
+    "options_ui":{
+        "page": "options.html",
+        "chrome_style": true,
+        "open_in_tab": true
+    },
 
     "page_action": {
         "default_title": "Show current timestamp",
