--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -18,7 +18,8 @@
         "declarativeContent",
         "activeTab",
         "tabs",
-        "identity"
+        "identity",
+        "storage"
     ],
     "content_security_policy":"script-src 'self' https://www.gstatic.com/ https://*.firebaseio.com https://www.googleapis.com; object-src 'self'",
     "content_scripts": [{
